--- a/GrooveSharkWindowsPhone/MainPage.xaml
+++ b/GrooveSharkWindowsPhone/MainPage.xaml
@@ -9,6 +9,6 @@
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
     <Grid>
-
+        <Button x:Name="Button" Content="Connexion" VerticalAlignment="Center" HorizontalAlignment="Center"></Button>
     </Grid>
 </Page>
