--- a/GrooveSharkWindowsPhone/App.xaml
+++ b/GrooveSharkWindowsPhone/App.xaml
@@ -2,6 +2,11 @@
     x:Class="GrooveSharkWindowsPhone.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:GrooveSharkWindowsPhone">
+    xmlns:local="using:GrooveSharkWindowsPhone"
+    RequestedTheme="Light">
+
+    <Application.Resources>
+        <ResourceDictionary Source="Ressources/ThemeDictionary.xaml"/>
+    </Application.Resources>
 
 </Application>
