--- a/GrooveSharkWindowsPhone/Views/SettingsView.xaml
+++ b/GrooveSharkWindowsPhone/Views/SettingsView.xaml
@@ -1,14 +1,14 @@
 ﻿<Page
-    x:Class="GrooveSharkWindowsPhone.MainPage"
+    x:Class="GrooveSharkWindowsPhone.Views.SettingsView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:GrooveSharkWindowsPhone"
+    xmlns:local="using:GrooveSharkWindowsPhone.Views"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
-    <Grid>
-        <Button x:Name="Button" Content="Connexion" VerticalAlignment="Center" HorizontalAlignment="Center"></Button>
-    </Grid>
+    <Pivot Title="{Binding Title}">
+        <PivotItem Header="Account"></PivotItem>
+    </Pivot>
 </Page>
