--- a/GrooveSharkWindowsPhone/Views/HomePage.xaml
+++ b/GrooveSharkWindowsPhone/Views/HomePage.xaml
@@ -22,33 +22,25 @@
                     <ColumnDefinition Width="*"></ColumnDefinition>
                 </Grid.ColumnDefinitions>
 
-                <Grid Grid.Row="1" Grid.Column="0" Margin="0,5,5,5">
-                    <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="#888888">
+
+                <TextBlock Grid.Row="1" Grid.Column="0" Margin="0,5,5,5" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="#888888">
                         <Run Text="{Binding SongPosition}"></Run>
                         <Run Text="."></Run>
-                    </TextBlock>
-                </Grid>
-          
-                <Grid Grid.Row="1" Grid.Column="1" Margin="5">
-                    <Image Height="63" Width="63"  Source="/Assets/Images/Songs/no_cover.png"/>
-                </Grid>
+                </TextBlock>
 
-                <Grid Grid.Row="1" Grid.Column="2" Margin="5">
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="*"></RowDefinition>
-                        <RowDefinition Height="Auto"></RowDefinition>
-                        <RowDefinition Height="Auto"></RowDefinition>
-                        <RowDefinition Height="*"></RowDefinition>
-                    </Grid.RowDefinitions>
+                <Image Height="63" Width="63" Grid.Row="1" Grid.Column="1" Margin="5" Source="/Assets/Images/Songs/no_cover_63.png"/>
 
-                    <TextBlock Grid.Row="1" FontSize="16" Text="{Binding SongName}" FontWeight="Bold"></TextBlock>
 
-                    <TextBlock Grid.Row="2" FontSize="16" TextTrimming="CharacterEllipsis">
+                <StackPanel Grid.Row="1" Grid.Column="2" Margin="5" VerticalAlignment="Center">
+
+                    <TextBlock  FontSize="16" Text="{Binding SongName}" FontWeight="Bold"></TextBlock>
+
+                    <TextBlock  FontSize="16" TextTrimming="CharacterEllipsis">
                         <Run Text="{Binding ArtistName}"></Run>
                         <Run Text=" • "></Run>
                          <Run Text="{Binding AlbumName}"></Run>
                     </TextBlock>
-                </Grid>
+                </StackPanel>
 
                 <StackPanel Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="2" Margin="0" Height="2" Background="#888888"></StackPanel>
             </Grid>
