--- a/GrooveSharkWindowsPhone/Views/HomeView.xaml
+++ b/GrooveSharkWindowsPhone/Views/HomeView.xaml
@@ -1,10 +1,10 @@
-﻿<Page
-    x:Class="GrooveSharkWindowsPhone.Views.HomePage"
+﻿<views:BaseView
+    x:Class="GrooveSharkWindowsPhone.Views.HomeView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:GrooveSharkWindowsPhone.Views"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:views="using:GrooveSharkWindowsPhone.Views"
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
@@ -171,4 +171,4 @@
             </CommandBar.SecondaryCommands>
         </CommandBar>
     </Page.BottomAppBar>
-</Page>
+</views:BaseView>
