--- a/GrooveSharkWindowsPhone/Views/LoginView.xaml
+++ b/GrooveSharkWindowsPhone/Views/LoginView.xaml
@@ -1,9 +1,10 @@
-﻿<Page
+﻿<views:BaseView
     x:Class="GrooveSharkWindowsPhone.Views.LoginView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:views="using:GrooveSharkWindowsPhone.Views"
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
@@ -27,7 +28,7 @@
         </StackPanel>
 
         
-        <Grid Grid.Row="1" x:Name="ContentRoot" Margin="19,9.5,19,0">
+        <Grid Grid.Row="0" Grid.RowSpan="2" x:Name="ContentRoot" Margin="19,9.5,19,0">
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"></RowDefinition>
                 <RowDefinition Height="Auto"></RowDefinition>
@@ -36,13 +37,13 @@
                 <RowDefinition Height="*"></RowDefinition>
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"></ColumnDefinition>
+                <ColumnDefinition Width="2*"></ColumnDefinition>
                 <ColumnDefinition Width="*"></ColumnDefinition>
             </Grid.ColumnDefinitions>
-            <TextBox Text="{Binding UserName, Mode=TwoWay}" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" PlaceholderText="Login" HorizontalAlignment="Stretch"></TextBox>
-            <TextBox Text="{Binding Password, Mode=TwoWay}" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" PlaceholderText="Password" HorizontalAlignment="Stretch"></TextBox>
-            <Button Grid.Row="3" Grid.Column="0" Command="{Binding LoginCommand}">Login</Button>
-            <Button Grid.Row="3" Grid.Column="1">Register</Button>
+            <TextBox Text="{Binding UserName, Mode=TwoWay}" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" PlaceholderText="{Binding UserNameLabel}" HorizontalAlignment="Stretch"></TextBox>
+            <PasswordBox IsPasswordRevealButtonEnabled="True" Password="{Binding Password, Mode=TwoWay}" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" PlaceholderText="{Binding PasswordLabel}" HorizontalAlignment="Stretch"></PasswordBox>
+            <Button Grid.Row="3" Grid.Column="1" HorizontalAlignment="Stretch" Command="{Binding LoginCommand}">Login</Button>
+  
         </Grid>
     </Grid>
-</Page>
+</views:BaseView>
