--- a/GrooveShark/GrooveShark.Shared/App.xaml
+++ b/GrooveShark/GrooveShark.Shared/App.xaml
@@ -1,7 +1,12 @@
 ﻿<Application
-    x:Class="GrooveShark.App"
+    x:Class="GrooveSharkWindowsPhone.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:GrooveShark">
+    xmlns:local="using:GrooveSharkWindowsPhone"
+    RequestedTheme="Light">
+
+    <Application.Resources>
+        <ResourceDictionary Source="Ressources/ThemeDictionary.xaml"/>
+    </Application.Resources>
 
 </Application>
