--- a/GrooveSharkWindowsPhone/App.xaml
+++ b/GrooveSharkWindowsPhone/App.xaml
@@ -9,7 +9,9 @@
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Ressources/ThemeDictionary.xaml"/>
-                <ResourceDictionary Source="Ressources/PivotStyle.xaml" />
+                <ResourceDictionary Source="Ressources/PivotStyles.xaml" />
+                <ResourceDictionary Source="Ressources/ListBoxStyles.xaml"></ResourceDictionary>
+                <ResourceDictionary Source="Ressources/DataTemplates.xaml"></ResourceDictionary>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
