--- a/GrooveSharkWindowsPhone/Views/LoginView.xaml
+++ b/GrooveSharkWindowsPhone/Views/LoginView.xaml
@@ -35,15 +35,16 @@
                     <RowDefinition Height="Auto"></RowDefinition>
                     <RowDefinition Height="Auto"></RowDefinition>
                     <RowDefinition Height="Auto"></RowDefinition>
+                    <RowDefinition Height="Auto"></RowDefinition>
                     <RowDefinition Height="*"></RowDefinition>
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="2*"></ColumnDefinition>
                     <ColumnDefinition Width="*"></ColumnDefinition>
                 </Grid.ColumnDefinitions>
-                <TextBox Text="{Binding UserName, Mode=TwoWay}" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" PlaceholderText="{Binding UserNameLabel}" HorizontalAlignment="Stretch"></TextBox>
-                <PasswordBox IsPasswordRevealButtonEnabled="True" Password="{Binding Password, Mode=TwoWay}" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" PlaceholderText="{Binding PasswordLabel}" HorizontalAlignment="Stretch"></PasswordBox>
-                <Button Grid.Row="3" Grid.Column="1" HorizontalAlignment="Stretch" Command="{Binding LoginCommand}">Login</Button>
+                <TextBox Text="{Binding UserName, Mode=TwoWay}" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" PlaceholderText="{Binding UserNameLabel}" HorizontalAlignment="Stretch"></TextBox>
+                <PasswordBox IsPasswordRevealButtonEnabled="True" Password="{Binding Password, Mode=TwoWay}" Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" PlaceholderText="{Binding PasswordLabel}" HorizontalAlignment="Stretch"></PasswordBox>
+                <Button Grid.Row="4" Grid.Column="1" HorizontalAlignment="Stretch" Command="{Binding LoginCommand}">Login</Button>
 
             </Grid>
         </Grid>
