--- a/GrooveSharkWindowsPhone/Views/LoginView.xaml
+++ b/GrooveSharkWindowsPhone/Views/LoginView.xaml
@@ -24,7 +24,7 @@
 
             <!-- Title Panel -->
             <StackPanel Grid.Row="0" Background="{ThemeResource GrooveSharkOrangeBrush}">
-                <TextBlock Text="{Binding AppTitle}" Style="{ThemeResource TitleTextBlockStyle}" Margin="19,12,0,0"/>
+                <TextBlock Text="{Binding AppTitle}" Style="{ThemeResource TitleTextBlockStyle}" x:Name="AppTitle" Margin="19,12,0,0"/>
                 <TextBlock Text="{Binding Title}" Margin="19,-6.5,0,26.5" Style="{ThemeResource HeaderTextBlockStyle}" CharacterSpacing="{ThemeResource PivotHeaderItemCharacterSpacing}"/>
             </StackPanel>
 
@@ -50,6 +50,6 @@
 
             </Grid>
         </Grid>
-        <userControls:UCError HorizontalAlignment="Stretch" VerticalAlignment="Stretch" x:Name="UcError" Visibility="Collapsed"></userControls:UCError>
+        <userControls:UCSessionError HorizontalAlignment="Stretch" VerticalAlignment="Stretch" x:Name="UcSessionError" Visibility="Collapsed"></userControls:UCSessionError>
     </Grid>
 </views:BaseView>
