--- a/GrooveSharkWindowsPhone/Ressources/DataTemplates.xaml
+++ b/GrooveSharkWindowsPhone/Ressources/DataTemplates.xaml
@@ -1,42 +1,22 @@
 ﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:userControls="using:GrooveSharkWindowsPhone.UserControls">
 
     <DataTemplate x:Name="SongTemplate">
-        <Grid Height="75">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"></RowDefinition>
-                <RowDefinition Height="*"></RowDefinition>
-                <RowDefinition Height="Auto"></RowDefinition>
-            </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto"></ColumnDefinition>
-                <ColumnDefinition Width="Auto"></ColumnDefinition>
-                <ColumnDefinition Width="*"></ColumnDefinition>
-            </Grid.ColumnDefinitions>
+        <userControls:UCSong></userControls:UCSong>
+    </DataTemplate>
 
+    <DataTemplate x:Name="FavoriteTemplate">
+        <userControls:UCFavorite></userControls:UCFavorite>
+    </DataTemplate>
 
-            <TextBlock Grid.Row="1" Grid.Column="0" Margin="0,5,5,5" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="#888888">
-                        <Run Text="{Binding SongPosition}"></Run>
-                        <Run Text="."></Run>
-            </TextBlock>
+    <DataTemplate x:Name="PlaylistDataTemplate">
+        <userControls:UCPlaylist></userControls:UCPlaylist>
+    </DataTemplate>
 
-            <Image Height="63" Width="63" Grid.Row="1" Grid.Column="1" Margin="5" Source="{Binding ThumbnailUrl}"/>
-
-
-            <StackPanel Grid.Row="1" Grid.Column="2" Margin="5" VerticalAlignment="Center">
-
-                <TextBlock  FontSize="16" Text="{Binding SongName}" FontWeight="Bold"></TextBlock>
-
-                <TextBlock  FontSize="16" TextTrimming="CharacterEllipsis">
-                        <Run Text="{Binding ArtistName}"></Run>
-                        <Run Text=" • "></Run>
-                         <Run Text="{Binding AlbumName}"></Run>
-                </TextBlock>
-            </StackPanel>
-
-            <StackPanel Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="2" Margin="0" Height="2" Background="#888888"></StackPanel>
-        </Grid>
+    <DataTemplate x:Name="MinimizedPlaylistDataTemplate">
+        <userControls:UCPlaylist Minimized="true"></userControls:UCPlaylist>
     </DataTemplate>
 
 </ResourceDictionary>
